--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -16,8 +16,8 @@
 
     <div>
         <label asp-for="Description" class="control-label"></label>
-        <textarea asp-for="Description" class="form-control" />
-        <span asp-validation-for="Description" class="Text-danger"></span>
+        <textarea asp-for="Description" class="form-control"></textarea>
+        <span asp-validation-for="Name" class="Text-danger"></span>
     </div>
 
     <div class="form-group">
