--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Comp 2139 Labs - Home page</h1>
+    <h1 class="display-4">Comp 2139 GBC Project Management Home</h1>
     
 </div>
