--- a/Views/Projects/Delete.cshtml
+++ b/Views/Projects/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model WebApplication1.Models.Project
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Project</h4>
     <hr />
@@ -41,9 +42,11 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-controller="Project" asp-action="Edit" asp-route-id="@Model.Project_id" class="btn btn-primary">Edit</a>
-    <a asp-controller="Project" asp-action="Index" class="btn btn-secondary">Back to List</a>
-   
+    
+    <form asp-action="DeleteComfirmed" method="post">
+        @Html.HiddenFor(model => model.Project_id)
+       
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
