--- a/Views/Tasks/Details.cshtml
+++ b/Views/Tasks/Details.cshtml
@@ -43,7 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="Project" asp-action="Edit" asp-route-id="@Model.Project_id" class="btn btn-primary">Edit</a>
-    <a asp-controller="Project" asp-action="Index" class="btn btn-secondary">Back to List</a>
-   
+    <a asp-action="Edit" asp-route-id="@Model?.Project_id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
