--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,30 +3,20 @@
 *@
 @{
     var name = "Nut Jaroensri";
-    var student_id = 101422089;
-    var course = "Comp2139 - asp.net mvc";
-
+    var studentNumber = "101422089";
+    var courseCode = "COMP2139 - asp.net mvc";
 }
 
 <!DOCTYPE html>
 <html>
-<head>
-    <title> In Class Exercise 1</title>
-
-
-</head>
-<body>
-    <h1> Welcome to my page</h1>
-    <p> Name: @name</p>
-    <p> Student ID: @student_id</p>
-    <p> Course: @course</p>
-
-
-
-
-
-</body>
-
-
+    <head>
+        <title>About Page                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 In Class Exercise</title>
+    </head>
+    <body>
+    <h1>Welcome to COMP2139</h1>
+        <p>Name: @name</p>
+        <p>Student Number: @studentNumber</p>
+        <p>Course: @courseCode</p>
+    </body>
 
 </html>
