--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Project
+﻿@model WebApplication2.Models.Project
 
 @{
     ViewData["Title"] = "Details";
@@ -43,7 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="Project" asp-action="Edit" asp-route-id="@Model.Project_id" class="btn btn-primary">Edit</a>
-    <a asp-controller="Project" asp-action="Index" class="btn btn-secondary">Back to List</a>
-   
+    <a asp-action="Edit" asp-route-id="@Model?.ProjectId" class="btn btn-secondary">Edit</a> |
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
