--- a/Views/Rental/Edit.cshtml
+++ b/Views/Rental/Edit.cshtml
@@ -56,7 +56,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-bookingId="@Model.Id" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary">Back to List</a>
 </div>
 
 @section Scripts {
