--- a/Views/Flight/Index.cshtml
+++ b/Views/Flight/Index.cshtml
@@ -33,7 +33,7 @@
 						<a asp-action="Details" asp-route-id="@flight.Id" class="btn btn-info">Details</a>
 						<a asp-action="Edit" asp-route-id="@flight.Id" class="btn btn-secondary">Edit</a>
 						<a asp-action="Delete" asp-route-id="@flight.Id" class="btn btn-danger">Delete</a>
-
+						<a asp-action="Book" asp-route-id="@flight.Id" class="btn btn-warning">Book</a>
 					</td>
 				</tr>
 
